kubernetes/apps/agentgateway/kgateway/app/mcproute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-metrics
  labels:
    app.kubernetes.io/name: agentgateway
    gateway.networking.k8s.io/gateway-name: agentgateway
spec:
  selector:
    app.kubernetes.io/name: agentgateway
    gateway.networking.k8s.io/gateway-name: agentgateway
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-admin
  labels:
    app.kubernetes.io/name: agentgateway-admin
spec:
  selector:
    app.kubernetes.io/name: agentgateway
    gateway.networking.k8s.io/gateway-name: agentgateway
  ports:
  - name: admin
    port: 15000
    targetPort: 15000
    protocol: TCP
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-ui
spec:
  parentRefs:
  - name: agentgateway
    namespace: agentgateway
    sectionName: https
  hostnames:
  - "mcp-gw.matherly.net"
  rules:
  - backendRefs:
    - name: agentgateway-admin
      port: 15000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-route
spec:
  parentRefs:
  - name: agentgateway
    namespace: agentgateway
    sectionName: mcp
  rules:
  - backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: mcp-backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: azure-openai-us-east-route
spec:
  parentRefs:
  - name: agentgateway
    namespace: agentgateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /azure-us-east
    backendRefs:
    - name: azure-openai-us-east
      namespace: agentgateway
      group: agentgateway.dev
      kind: AgentgatewayBackend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: azure-openai-us-east2-route
spec:
  parentRefs:
  - name: agentgateway
    namespace: agentgateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /azure-us-east2
    backendRefs:
    - name: azure-openai-us-east2
      namespace: agentgateway
      group: agentgateway.dev
      kind: AgentgatewayBackend
